fixing icon/image  in dark mode in onboarding page (#2084)
* added new svg

* bugfix :: padding inconsistency , dark mode svg update

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -3170,7 +3170,6 @@ input[type="text"] {
   background: #ffffff !important;
   border: 1px solid #4D72FA !important;
   cursor: pointer;
-  padding-left: .5rem;
   position: relative;
   &:hover{
     background-color: #f4f6fa !important;
